                        Current Project Changelog

* Wed May 24 2005 Jack Neely <jjneely@gmail.com>
- Current 1.7.2 -- Developer's only release
- Management of RPMs served out by Current handled much better.
- Detection of duplicate NEVR in channels
- More efficiant symlinking
- The scan process should not traceback due to file issues but handle
  the errors cleanly
- RPM filenames are now always what up2date expects rather than what
  you may have happened to name the file
- Database has seprate modules for seprate functions.  currentdb handles
  files.  web.py handles quries for the web interface.  profile.py
  handles queries releated to individual clients.
- A templated web frontend
- web code in src/web
- templates in templates/

* Mon Apr 04 2005 Jack Neely <jjneely@gmail.com>
- Current 1.7.1 -- Developer's only release
- Re-work cadmin to have a modular inerface that's easily expanded.
  See the admin module.
- Code to handle sessions via Cookies as well as a normal session hash
- Import of SimpleTAL 3.12.  All our web pages will be simpleTal
  templates.
- A new mod_python hander, current_web.py, to power web frontend.
  Right now just enough to test the session code

* Mon Mar 21 2005 Jack Neely <jjneely@gmail.com>
- Current 1.6.0
- Some very minor documentation tweeks regarding generating SSL certs

* Sun Feb 27 2005 Jack Neely <jjneely@gmail.com>
- Current 1.5.91 AKA 1.6.0 Release Canidate 1
- Make cadmin use optparse instead of optik
- Removed those evil evals() from the XMLRPC server.  We use the newer
  __getattribute__() call.

* Wed Feb 16 2005 Jack Neely <jjneely@gmail.com>
- Current 1.5.11
- ConstructParser is gone in favor of headerParser to parse the list-like
  strings from the up2date clients.  Much cleaner.
- If filesystems bits of cadmin scan_channel blow up the database transaction
  that is part of that operation are rolled back.  This leaves Current in
  the same state that it was before the scan_channel command